# slack-gpt-agent

./: .env.example  Dockerfile  README.md  compose.yml  pyproject.toml
app/: main.py
app/services/agents/: __init__.py
app/services/agents/tools/: calculator_tool.py
app/types/: index.py
app/utils/: __init__.py
scripts/: dev.py  lint.py  prod.py
