[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["vikyw89 <vikyw89@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
fastapi = "^0.111.1"
slack-bolt = "^1.19.1"
aiohttp = "^3.9.5"
langgraph = "^0.1.9"
langchain-openai = "^0.1.17"


[tool.poetry.dev-dependencies]
black = "^24.4.2"
ruff = "^0.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
dev = "scripts.dev:run"
lint = "scripts.lint:run"
prod = "scripts.prod:run"